[package]
name = "surf-middleware-cache"
version = "0.2.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.3.1"
futures = "0.3.17"
serde_json = "1.0.68"
httpdate = "1.0.1"
http-types = "2.5.0"

[dev-dependencies]
async-attributes = "1.1.2"
